<resources>
    <string name="app_name">Praktikum Kelas 5</string>
    <string name="my_name">Mirza Yogy</string>
    <string name="praktikum_apps">Praktikum Apps</string>
    <string name="student_id">Student Id</string>
    <string name="student_name">Student Name</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="dial">Dial</string>
</resources>