<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".StudentActivity">


    <EditText
        android:id="@+id/etIdStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/student_id"
        />

    <EditText
        android:id="@+id/etNameStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/student_name"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/etPhoneNumberStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btSendStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btDialStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        android:layout_marginTop="16dp"
        />


</LinearLayout>